examples/type_system/failing/104_missing_colon_effect_op.flx
effect Console {
    print String -> Unit
}
